<resources>
    <string name="app_name">Employee and Admin Mobile App Project</string>
    <string name="employee_self_service">Employee Self Service</string>
    <string name="usertype_textView">User Type</string>
    <string name="employee_scrollPicker_text">Employee</string>
    <string name="username_textView">Username</string>
    <string name="passwd_textView">Password</string>

    <string name="home_textView">Home</string>
    <string name="notification_textView">Notification</string>
    <string name="leave_textView">Leave</string>
    <string name="profile_textView">Profile</string>
    <string name="settings_textView">Settings</string>

    <string name="leaveBtn_content_textView">Feel free to submit your leave request</string>
    <string name="new_notification_textView">New Notification</string>

    <!--  profile details  -->
    <string name="personal_profile_details_textView">Personal Details</string>
    <string name="residential_address_textView">Residential Address</string>
    <string name="mobile_no_textView">Mobile No.</string>
    <string name="sex_textView">Sex</string>
    <string name="skills_textView">Skills</string>

    <!--  role details  -->
    <string name="role_profile_details_textView">Role Details</string>
    <string name="employeeId_textView">Employee Id</string>
    <string name="position_textView">Position</string>
    <string name="company_address_textView">Company Address</string>
    <string name="department_textView">Department</string>
    <string name="manager_textView">Manager/Supervisor</string>
    <string name="status_textView">Status</string>
    <string name="salary_textView">Salary Payment</string>
    <string name="benefit_enrollment_textView">Benefit Enrollment</string>
    <string name="health_insurance_textView">Health Insurance</string>
    <string name="business_travel_textView">Business Travel Insurance</string>

    <!--  leave request status  -->
    <string name="approve_textView">Approved</string>
    <string name="decline_textView">Declined</string>
    <string name="pending_textView">Pending</string>

    <!--  Filter text view  -->
    <string name="all_textView">All</string>

    <string name="announcement_textView">Announcement</string>
    <string name="holiday_textView">Holiday</string>
    <string name="work_schedule_textView">Work Schedule</string>
    <string name="training_session_textView">Training Session</string>
    <string name="performance_updates_textView">Performance Updates</string>
    <string name="anniversaries_textView">Anniversaries</string>
    <string name="profile_updates_textView">Profile Updates</string>
    <string name="leave_request_textView">Leave Request</string>
    <string name="security_textView">Security Info</string>

    <string name="annual_leave_textView">Annual</string>
    <string name="personal_leave_textView">Personal</string>
    <string name="sick_leave_textView">Sick</string>
    <string name="unpaid_leave_textView">Unpaid</string>

    <!--  button text  -->
    <string name="edit_text">EDIT</string>
    <string name="edit_personal_text">EDIT PERSONAL DETAILS</string>
    <string name="edit_role_text">EDIT ROLE DETAILS</string>
    <string name="reset_password_text">RESET PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>