<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        app:showAsAction="always"-->
<!--        android:title=""-->
<!--        android:icon="@drawable/baseline_menu_24">-->

<!--        <menu>-->
<!--            <item android:id="@+id/home"-->
<!--                android:title="@string/home_textView"-->
<!--                app:showAsAction="never"/>-->
<!--            <item android:id="@+id/notification"-->
<!--                android:title="@string/notification_textView"-->
<!--                app:showAsAction="never"/>-->
<!--            <item android:id="@+id/leave"-->
<!--                android:title="@string/leave_textView"-->
<!--                app:showAsAction="never"/>-->
<!--            <item android:id="@+id/personal_profile"-->
<!--                android:title="@string/personal_profile_details_textView"-->
<!--                app:showAsAction="never"/>-->
<!--            <item android:id="@+id/role_profile"-->
<!--                android:title="@string/role_profile_details_textView"-->
<!--                app:showAsAction="never"/>-->
<!--        </menu>-->
<!--    </item>-->
    <item android:id="@+id/home"
        android:title="@string/home_textView"
        android:icon="@drawable/home_icon" />
    <item android:id="@+id/notification"
        android:title="@string/notification_textView"
        android:icon="@drawable/notification_icon"/>
    <item android:id="@+id/leave"
        android:title="@string/leave_textView"
        android:icon="@drawable/leave_icon"/>
<!--    <item android:id="@+id/personal_profile"-->
<!--        android:title="@string/personal_profile_details_textView" />-->
<!--    <item android:id="@+id/role_profile"-->
<!--        android:title="@string/role_profile_details_textView" />-->
</menu>