<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeNotificationFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:background="#2854C5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:text="@string/notification_textView" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="90dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_textView"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:padding="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/announcement_textView"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:padding="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holiday_textView"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:padding="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_schedule_textView"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:padding="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_session_textView"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:padding="20dp"/>
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- notifications -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/profile_update_icon"/>
                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:text="22 May 2024 – 11:30 AM"
                        android:textColor="#666666"
                        android:textSize="16sp"
                        android:layout_alignParentEnd="true"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="40dp"
                        android:text="You're updated your profile information"
                        android:textSize="18sp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        tools:ignore="HardcodedText" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#999999"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/announcement_icon"/>
                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:text="06 May 2024 – 12:45 PM"
                        android:textColor="#666666"
                        android:textSize="16sp"
                        android:layout_alignParentEnd="true"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="40dp"
                        android:text="You're updated your profile information"
                        android:textSize="18sp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        tools:ignore="HardcodedText" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#999999"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>